Fix string concatenation in process command